<?xml version="1.0" encoding="utf-8"?><!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragmentEvents"

        android:icon="@drawable/ic_events_24dp"
        android:title="@string/bottom_nav_events_title" />

    <item
        android:id="@+id/fragmentPlaces"
        android:icon="@drawable/ic_places_24dp"
        android:title="@string/bottom_nav_places_title" />
    <item
        android:id="@+id/fragmentNews"
        android:icon="@drawable/ic_news_on_surface_24dp"
        android:title="@string/bottom_nav_news_title"/>
    <item
        android:id="@+id/fragmentProfile"
        android:icon="@drawable/ic_user_24dp"
        android:title="@string/bottom_nav_profile" />

</menu>
