<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher">


        </com.google.android.material.imageview.ShapeableImageView>

        <TextView
            android:id="@+id/nameText"
            style="?attr/textAppearanceHeadline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="WroSlav"

            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/loginText"
            style="?attr/textAppearanceBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Guest"

            app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
            app:layout_constraintTop_toBottomOf="@+id/nameText">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="5dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/opt2Ico1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_settings"
                tools:srcCompat="@drawable/ic_settings" />

            <TextView
                android:id="@+id/option2"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/content_profil_settings"

                app:layout_constraintStart_toEndOf="@+id/opt2Ico1"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                style="?attr/textAppearanceBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/content_profil_settings_desc"


                app:layout_constraintStart_toEndOf="@+id/opt2Ico1"
                app:layout_constraintTop_toBottomOf="@+id/option2">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="5dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/opt4Ico1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logout"
                tools:srcCompat="@drawable/ic_logout" />

            <TextView
                android:id="@+id/option4"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/content_profil_LogOut"


                app:layout_constraintStart_toEndOf="@+id/opt4Ico1"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</LinearLayout>
